--- a/LICENSE.adoc
+++ b/LICENSE.adoc
@@ -1,21 +1,3 @@
-[[license]]
-== LICENSE
+= LICENSE
 
-Copyright Ciro Santilli http://www.cirosantilli.com/
-
-https://www.gnu.org/licenses/gpl-3.0.txt[GPL v3] for executable computer program usage.
-
-https://creativecommons.org/licenses/by-sa/4.0/[CC BY-SA v4] for human consumption usage in learning material, e.g. `.md` files, source code comments, using source code excerpts in tutorials. Recommended attribution:
-
-* Single file adaptations:
-+
-....
-Based on https://github.com/cirosantilli/x86-bare-metal-examples/blob/<commit-id>/path/to/file.md under CC BY-SA v4
-....
-* Multi-file adaptations:
-+
-....
-Based on https://github.com/cirosantilli/x86-bare-metal-examples/tree/<commit-id> under CC BY-SA v4
-....
-
-If you want to use this work under a different license, contact the copyright owner, and he might make a good price.
+See: link:README.adoc#license[]
